KQED -/src/objects/Purchase_Order_Product__c.object
<CustomObject>
    <fields>
        <fullName>Clone_Premium__c</fullName>
        <formula>Product__r.Clone_Premium__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clone Premium</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drive_Campaign__c</fullName>
        <formula>Purchase_Order__r.Drive_Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drive Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Category__c</fullName>
        <formula>TEXT(Product__r.Premium_Category__c)</formula>
        <label>Premium Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Premium/Benefit</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Purchase Order Products</relationshipLabel>
        <relationshipName>Purchase_Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Purchase Order Premiums/Benefits</relationshipLabel>
        <relationshipName>Purchase_Order_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <label>Received Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status2__c</fullName>
        <formula>IF( OR(Received_Quantity__c = 0,  ISPICKVAL(Purchase_Order__r.Status__c, &quot;Suggested&quot;), ISPICKVAL(Purchase_Order__r.Status__c, &quot;Open&quot;), ISPICKVAL(Purchase_Order__r.Status__c, &quot;Approvals&quot;), ISPICKVAL(Purchase_Order__r.Status__c, &quot;Approved&quot;)),
  &quot;Open&quot;,

IF( AND(Received_Quantity__c = 0,  OR(ISPICKVAL(Purchase_Order__r.Status__c, &quot;Purchased&quot;), ISPICKVAL(Purchase_Order__r.Status__c, &quot;Confirmed&quot;))),
  &quot;Purchased&quot;,

IF( AND(Received_Quantity__c &gt; 0, Unreceived_Quantity__c &gt; 0),
  &quot;Partially Received&quot;,

IF( AND(Received_Quantity__c &gt; 0, Unreceived_Quantity__c = 0),
  &quot;Received&quot;,

&quot;&quot;

))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unreceived_Quantity__c</fullName>
        <formula>Quantity__c  -  Received_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unreceived Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Purchase Order Product</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Purchase Order Premium/Benefit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Received_More_than_Ordered</fullName>
        <active>true</active>
        <errorConditionFormula>Received_Quantity__c &gt; Quantity__c</errorConditionFormula>
        <errorMessage>Received quantity cannot be greater than ordered quantity.</errorMessage>
    </validationRules>
</CustomObject>